--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,3 @@
-<app-navigator></app-navigator>
-<!-- Page Content-->
-<div class="container-fluid p-0">
-  <app-about></app-about>
-  <hr class="m-0" />
-  <app-experience></app-experience>
-  <hr class="m-0" />
-  <app-education></app-education>
-  <hr class="m-0" />
-  <app-skills></app-skills>
-  <hr class="m-0" />
-  <app-interests></app-interests>
-  <hr class="m-0" />
-  <app-awards></app-awards>
+<div>
+  <router-outlet></router-outlet>
 </div>
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="js/scripts.js"></script>
