--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -1,1 +1,15 @@
-<p>portfolio works!</p>
+<app-navigator></app-navigator>
+<!-- Page Content-->
+<div class="container-fluid p-0">
+    <app-about></app-about>
+    <hr class="m-0" />
+    <app-experience></app-experience>
+    <hr class="m-0" />
+    <app-education></app-education>
+    <hr class="m-0" />
+    <app-skills></app-skills>
+    <hr class="m-0" />
+    <app-interests></app-interests>
+    <hr class="m-0" />
+    <app-awards></app-awards>
+</div>
