Agregado get para education

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -11,7 +11,7 @@
             {{myPortfolio.address}}<br>
             <a href="mailto:name@email.com">{{myPortfolio.email}}</a>
         </div>
-        <p class="lead mb-5">{{myPortfolio.summary}}</p>
+        <p class="lead mb-5">{{myPortfolio.about}}</p>
         <div class="social-icons">
             <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
             <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
