--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,22 +1,32 @@
 <section class="resume-section" id="education">
     <div class="resume-section-content">
         <h2 class="mb-5">Education</h2>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-            <div class="flex-grow-1">
-                <h3 class="mb-0">University of Colorado Boulder</h3>
-                <div class="subheading mb-3">Bachelor of Science</div>
-                <div>Computer Science - Web Development Track</div>
-                <p>GPA: 3.23</p>
-            </div>
-            <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between">
-            <div class="flex-grow-1">
-                <h3 class="mb-0">James Buchanan High School</h3>
-                <div class="subheading mb-3">Technology Magnet Program</div>
-                <p>GPA: 3.56</p>
-            </div>
-            <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+        <div class="row" *ngFor="let edu of education">
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                   <h3 class="mb-0">{{edu.schoolName}}</h3>
+                   <div class="subheading mb-3">{{edu.title}}</div>
+                   <div>{{edu.description}}</div>
+                   <div> <a href="{{edu.url_photo}}"></a> </div>
+                   <div>
+                        <a
+                            class="btn btn-primary tooltips"
+                            data-placement="top"
+                            data-toggle="tooltip"
+                            data-original-title="Edit">
+                            <i class="fa fa-pensil"></i>
+                        </a>
+                        <a
+                            class="btn btn-secondary tooltips"
+                            data-placement="top"
+                            data-toggle="tooltip"
+                            data-original-title="Delete">
+                            <i class="fa fa-times"></i>
+                        </a>
+                   </div>
+               </div>
+               <div class="flex-shrink-0"><span class="text-primary">{{edu.start}} - {{edu.end}}</span></div>
+           </div>
         </div>
     </div>
 </section>
