--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -1,6 +1,13 @@
 <section class="resume-section" id="experience">
     <div class="resume-section-content">
         <h2 class="mb-5">Experience</h2>
+        <div class="text-center">
+            <button  type="button" class="btn btn-success">
+                <a class="nav-link" style="color:white">
+                    Añadir experiencia <span class="sr-only">(current)</span>
+                </a>
+            </button>
+        </div>
         <ul>
             <li style="list-style:none" *ngFor="let experience of experienceList">
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
