--- a/src/app/components/education/education.component.html
+++ b/src/app/components/education/education.component.html
@@ -1,11 +1,14 @@
 <section class="resume-section" id="education">
-    <div class="resume-section-content">
+    <div class="resume-section-content" id="main-container">
         <h2 class="mb-5">Education</h2>
         <div class="text-center">
-            <button  type="button" class="btn btn-success" (click)="onOpenModal('add')">
-                <a class="nav-link" style="color:white">
-                    Añadir educación <span class="sr-only">(current)</span>
-                </a>
+            <button 
+                type="button" 
+                class="btn btn-success" 
+                data-bs-toggle="modal" 
+                data-bs-whatever="@fat"
+                (click)="onOpenModal('add')">
+                Añadir educacion
             </button>
         </div>
         <div class="row" *ngFor="let edu of education">
@@ -39,54 +42,46 @@
         </div>
     </div>
     <!--Modal Add Education-->
-
-<div class="modal fade" id="addEducationModal" tabindex="-1" aria-labelledby="addEducationModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="addEducationModalLabel">New message</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="mb-3">
-              <label for="recipient-name" class="col-form-label">Recipient:</label>
-              <input type="text" class="form-control" id="title">
-            </div>
-            <div class="mb-3">
-              <label for="message-text" class="col-form-label">Message:</label>
-              <textarea class="form-control" id="title"></textarea>
-            </div>
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Send message</button>
-        </div>
-      </div>
-    </div>
-  </div>
-    <!--<div    
-        class="modal fade" id="addEducationModal" tabindex="-1" role="dialog" 
-        aria-labelledby="addEducationModalLabel" aria-hidden="true">
+    <div    
+        class="modal fade" 
+        id="addEducationModal" 
+        tabindex="-1" 
+        role="dialog" 
+        aria-labelledby="addEducationModalLabel" 
+        aria-hidden="true"
+        >
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="addEducationModalLabel">Añadir educación</h5>
+                        <h5 
+                            class="modal-title" 
+                            id="addEducationModalLabel">
+                            Añadir educación
+                        </h5>
                         <button
                             type="button"
-                            class="close"
-                            data-dismiss="modal"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
                             aria-label="close"
-                            ><span aria-hidden="true">&times;</span>
-                        </button>
+                            ></button>
                     </div>
                     <div class="modal-body">
                         <form #addForm="ngForm" (ngSubmit)="onAddEducation(addForm)">
                             <div class="form-group">
-                                <label for="title">Titulo</label>
+                                <label for="schoolName">Nombre de institución:</label>
                                 <input type="text"
-                                        ng Model
+                                        ngModel
+                                        name="schoolName"
+                                        class="form-control"
+                                        id="schoolName"
+                                        placeholder="Nombre"
+                                        required
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="title">Título:</label>
+                                <input type="text"
+                                        ngModel
                                         name="title"
                                         class="form-control"
                                         id="title"
@@ -95,9 +90,9 @@
                                         >
                             </div>
                             <div class="form-group">
-                                <label for="start">Inicio</label>
+                                <label for="start">Inicio:</label>
                                 <input type="text"
-                                        ng Model
+                                        ngModel
                                         name="start"
                                         class="form-control"
                                         id="start"
@@ -106,13 +101,35 @@
                                         >
                             </div>
                             <div class="form-group">
-                                <label for="end">Fin</label>
+                                <label for="end">Fin:</label>
                                 <input type="text"
-                                        ng Model
+                                        ngModel
                                         name="end"
                                         class="form-control"
                                         id="end"
                                         placeholder="Fin"
+                                        required
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="description">Descripción:</label>
+                                <input type="text"
+                                        ngModel
+                                        name="description"
+                                        class="form-control"
+                                        id="description"
+                                        placeholder="Descripción"
+                                        required
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="url_photo">URL de imagen:</label>
+                                <input type="text"
+                                        ngModel
+                                        name="url_photo"
+                                        class="form-control"
+                                        id="url_photo"
+                                        placeholder="URL de imagen"
                                         required
                                         >
                             </div>
@@ -121,12 +138,119 @@
                                         type="button"
                                         id="add-education-form"
                                         class="btn btn-secondary"
-                                        data-dismiss="modal"
+                                        data-bs-dismiss="modal"
                                         >
                                         Cerrar
                                 </button>
                                 <button
                                         [disabled]="addForm.invalid"
+                                        type="submit"
+                                        class="btn btn-primary"
+                                        >
+                                        Añadir
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+    </div>
+    <!--Modal Edit Education-->
+    <div    
+        class="modal fade" 
+        id="editEducationModal" 
+        tabindex="-1" 
+        role="dialog" 
+        aria-labelledby="editEducationModalLabel" 
+        aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 
+                            class="modal-title" 
+                            id="editEducationModalLabel">
+                            Editar educación - {{editEducation?.schoolName}} -[{{editEducation?.id}}]
+                        </h5>
+                        <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="close"
+                            ></button>
+                    </div>
+                    <div class="modal-body">
+                        <form #addForm="ngForm" (ngSubmit)="onAddEducation(addForm)">
+                            <div class="form-group">
+                                <label for="schoolName">Nombre de institución:</label>
+                                <input type="text"
+                                        ngModel="{{editEducation?.schoolName}}"
+                                        name="schoolName"
+                                        class="form-control"
+                                        id="schoolName"
+                                        placeholder="Nombre"
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="title">Título:</label>
+                                <input type="text"
+                                        ngModel="{{editEducation?.title}}"
+                                        name="title"
+                                        class="form-control"
+                                        id="title"
+                                        placeholder="Titulo"
+                                        required
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="start">Inicio:</label>
+                                <input type="text"
+                                        ngModel="{{editEducation?.start}}"
+                                        name="start"
+                                        class="form-control"
+                                        id="start"
+                                        placeholder="Inicio"
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="end">Fin:</label>
+                                <input type="text"
+                                        ngModel="{{editEducation?.end}}"
+                                        name="end"
+                                        class="form-control"
+                                        id="end"
+                                        placeholder="Fin"
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="description">Descripción:</label>
+                                <input type="text"
+                                        ngModel="{{editEducation?.description}}"
+                                        name="description"
+                                        class="form-control"
+                                        id="description"
+                                        placeholder="Descripción"
+                                        >
+                            </div>
+                            <div class="form-group">
+                                <label for="url_photo">URL de imagen:</label>
+                                <input type="text"
+                                        ngModel="{{editEducation?.url_photo}}"
+                                        name="url_photo"
+                                        class="form-control"
+                                        id="url_photo"
+                                        placeholder="URL de imagen"
+                                        >
+                            </div>
+                            <div class="modal-footer">
+                                <button
+                                        type="button"
+                                        id="add-education-form"
+                                        class="btn btn-secondary"
+                                        data-bs-dismiss="modal"
+                                        >
+                                        Cerrar
+                                </button>
+                                <button
                                         type="submit"
                                         class="btn btn-primary"
                                         >
@@ -138,5 +262,56 @@
                 </div>
             </div>
     </div>
-    -->
+    <!--Modal Delete Education-->
+    <div    
+        class="modal fade" 
+        id="deleteEducationModal" 
+        tabindex="-1" 
+        role="dialog" 
+        aria-labelledby="deleteEducationModalLabel" 
+        aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 
+                            class="modal-title" 
+                            id="deleteEducationModalLabel">
+                            Borrar educación
+                        </h5>
+                        <button
+                            type="button btn-close"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="close"
+                            ></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>¿Está seguro de borrar?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button
+                                type="button"
+                                id="delete-education-form"
+                                class="btn btn-secondary"
+                                data-bs-dismiss="modal"
+                                >
+                                Cerrar
+                        </button>
+                        <button
+                                (click)="onDeleteEducation(deleteEducation!.id)"
+                                data-bs-dismiss="modal"
+                                class="btn btn-danger"
+                                >
+                                Aceptar
+                        </button>
+                    </div>
+                </div>
+            </div>
+    </div> 
+<!--ALERT MESSAGE - EDUCATIONS NOT FOUND-->
+    <div *ngIf="education?.length == 0" class="col-lg-3 col-md-11 col-x1-2 text-center">
+        <div class="alert alert-info" role="alert">
+            <h4 class="alert-heading">NO HAY EDUCACIONES</h4>
+        </div>
+    </div>
 </section>
